--- a/item-list.html
+++ b/item-list.html
@@ -29,6 +29,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -38,6 +39,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -47,6 +49,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -56,6 +59,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -65,6 +69,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -74,6 +79,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -83,6 +89,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -92,6 +99,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -101,6 +109,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -110,6 +119,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -119,6 +129,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -128,6 +139,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -147,6 +159,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -156,6 +169,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -165,6 +179,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -174,6 +189,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -183,6 +199,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -192,6 +209,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -201,6 +219,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -210,6 +229,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -219,6 +239,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -228,6 +249,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -237,6 +259,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -246,6 +269,7 @@
                                     <div>
                                         <p><b>Item</b></p>
                                         <p>Price</p>
+                                        <p><small>Amount</small></p>
                                     </div>
                                 </div>
                             </li>
@@ -259,6 +283,7 @@
     <footer>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="item-list.html">List</a>
         <p>&copy chocorange 2022</p>
     </footer>
 </body>
