--- a/detail.html
+++ b/detail.html
@@ -48,6 +48,7 @@
     <footer>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="item-list.html">List</a>
         <p>&copy chocorange 2022</p>
     </footer>
 </body>
